--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "outputPath": "dist/quiz-hype",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -29,15 +29,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            }
+            "scripts": []
           },
           "configurations": {
             "production": {
+              "baseHref": "/QuizHype/",
               "budgets": [
                 {
                   "type": "initial",
@@ -53,6 +49,7 @@
               "outputHashing": "all"
             },
             "development": {
+              "baseHref": "/",
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
